tests/samples/invalid/constant_evaluated_function.pn

const X: i32 = foo();

fn main() -> i32
{
	var result = X;
	return: X
}

fn foo() -> i32
{
	return: 100
}
